--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "three": "^0.162.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
